# vtask

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  scheduling.jsonl
VTASK/: __init__.py  harness.py  registry.py  training.py
VTASK/domains/: dependencies.py  fsm.py  inventory.py  scheduling.py  spatial.py  temporal.py
VTASK/vtask/: __init__.py  base.py  harness.py  registry.py
VTASK/vtask/domains/: dependencies.py  fsm.py  inventory.py  scheduling.py  spatial.py  temporal.py
examples/: anthropic_eval.py  basic_usage.py
scripts/: generate_dataset.py  run_eval.py
tests/: test_base.py  test_dependencies.py  test_fsm.py  test_inventory.py  test_scheduling.py  test_spatial.py  test_temporal.py
train/: README.md  eval_model.py  requirements.txt  test_reward_fn.py  train.py
ui/: README.md
ui/backend/: main.py  requirements.txt
ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
ui/frontend/src/: App.jsx  index.css
ui/frontend/src/views/: Eval.jsx  Explorer.jsx  Export.jsx
